create login page

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,34 +1,1 @@
-@font-face {
-  font-family: "Qanelas Light";
-  src: url("../fonts/Qanelas-Light.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Qanelas Regular";
-  src: url("../fonts/Qanelas-Regular.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Qanelas Medium";
-  src: url("../fonts/Qanelas-Medium.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Qanelas SemiBold";
-  src: url("../fonts/Qanelas-SemiBold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
-@font-face {
-  font-family: "Qanelas Bold";
-  src: url("../fonts/Qanelas-Bold.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
