--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -1,41 +1,23 @@
 // font size
 
-$card-text-fz: 20px;
+$primary-fz: 30px;
 
-$card-text-fz-mobile: 16px;
+$title-fz: 24px;
 
-$card-title-fz: 26px;
+$sub-title-fz: 20px;
 
-$card-title-fz-mobile: 22px;
+$standart-fz: 16px;
+
+$small-fz: 14px;
 
 // colors
 
-$primary-color: #093D88;
+$primary-color: #242220;
 
-$primary-color-light: #4b9ed7;
+$primary-transparent-color: #242220D9;
 
-$gradient: linear-gradient(93.92deg, #4B9ED7 13.08%, #093D88 129.55%);
-
-$secondary-color: #E2E2E2;
-
-$secondary-color-opacity: rgba(226, 226, 226, 0.5);
-
-$question-color: #4B9ED7;
-
-$question-active-color: #E9E9E9;
-
-$contrasr-color: #ffffff;
-
-$black-color: #000000;
+$contrast-color: #FFFFFF;
 
 // font-family
 
-$font-family-light: "Qanelas Light";
-
-$font-family-regular: "Qanelas Regular";
-
-$font-family-medium: "Qanelas Medium";
-
-$font-family-semibold: "Qanelas SemiBold";
-
-$font-family-bold: "Qanelas Bold";
+$font-family-Inter: "Inter", sans-serif;
