--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -16,7 +16,11 @@ $primary-color: #242220;
 
 $primary-transparent-color: #242220D9;
 
+$grey-color: #2422200D;
+
 $contrast-color: #FFFFFF;
+
+$blue-color: #1890FF;
 
 // font-family
 
