add page conference

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -18,9 +18,13 @@ $primary-transparent-color: #242220D9;
 
 $grey-color: #2422200D;
 
+$grey-light-color: #24222033;
+
 $contrast-color: #FFFFFF;
 
 $blue-color: #1890FF;
+
+$background-color: #F8F8F8;
 
 // font-family
 
