add page conference-create and conference-redact

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -29,3 +29,5 @@ $background-color: #F8F8F8;
 // font-family
 
 $font-family-Inter: "Inter", sans-serif;
+
+$font-family-Montserrat: "Montserrat", sans-serif;
