--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,8 +22,12 @@ main{
 .container{
   max-width: 1260px;
   width: 100%;
-  padding: 30px 10px 0 10px;
+  padding: 30px 10px 20px 90px;
   margin: 0 auto;
+  @include transition();
+  &_active{
+    padding: 30px 10px 0 10px;
+  }
 }
 
 
@@ -104,7 +108,7 @@ main{
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  position: sticky;
+  position: fixed;
   left: 0;
   top: 0;
   width: 80px;
@@ -114,6 +118,10 @@ main{
   border-right: 1px solid $grey-color;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  @include transition();
+  &_hide{
+    left: -80px;
+  }
   &__arrow{
     @include flex();
     position: absolute;
@@ -125,6 +133,13 @@ main{
     border: 1px solid $background-color;
     border-radius: 8px;
     cursor: pointer;
+    @include transition();
+    svg{
+      transform: rotate(180deg);
+    }
+    &_hide{
+      transform: rotate(-180deg);
+    }
   }
   &__logo{
     width: 44px;
@@ -281,6 +296,9 @@ main{
     gap: 10px;
     font-family: $font-family-Inter;
     font-size: $title-fz;
+    a{
+      display: flex;
+    }
     svg{
       cursor: pointer;
     }
@@ -364,7 +382,7 @@ main{
 
 .table{
   width: 100%;
-  overflow-x: scroll;
+  margin-bottom: 30px;
   table{
     width: 100%;
   }
@@ -433,6 +451,180 @@ main{
       flex-basis: 7.3%;
       display: flex;
       justify-content: center;
+    }
+  }
+  @media screen and (max-width: 1140px) {
+    overflow-x: scroll;
+  }
+}
+
+
+//                PAGINATION
+
+
+.pagination{
+  display: flex;
+  max-width: 450px;
+  width: 100%;
+  margin-left: auto;
+  &__content{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  &__item{
+    @include flex();
+    font-family: $font-family-Inter;
+    font-size: 18px;
+    width: 40px;
+    height: 40px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    @include transition();
+    cursor: pointer;
+    &_active,&:hover{
+      color: $blue-color;
+      border: 1px solid $blue-color;
+    }
+  }
+  &__prev, &__next{
+    font-family: $font-family-Inter;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  &__prev{
+    color: #2422204D;
+    cursor: not-allowed;
+  }
+}
+
+
+//                CONFERENCE CREATE
+
+
+.conference-settings{
+  border-top: 1px dashed #24222033;
+  &__block{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 30px 0;
+    border-bottom: 1px dashed #24222033;
+    &:last-child{
+      .conference-settings__content{
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 30px;
+      }
+    }
+  }
+  &__title{
+    font-family: $font-family-Montserrat;
+    font-size: $sub-title-fz;
+    margin-bottom: 20px;
+  }
+  &__content{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 700px;
+    width: 100%;
+  }
+  &__label{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    font-family: $font-family-Inter;
+    font-size: $standart-fz;
+    b{
+      color: #ED1D23;
+      margin-right: 4px;
+    }
+  }
+  &__input{
+    background: transparent;
+    border: 1px solid $grey-light-color;
+    padding: 13px 12px;
+    border-radius: 8px;
+  }
+  &__count{
+    text-align: right;
+    font-size: 12px;
+    color: #24222080;
+  }
+  &__group{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    .conference-settings__label{
+      max-width: 220px;
+      width: 100%;
+    }
+  }
+  &__accept{
+    display: flex;
+    gap: 15px;
+    cursor: pointer;
+    input{
+      background: transparent;
+      width: 24px;
+      height: 24px;
+    }
+    p{
+      font-family: $font-family-Inter;
+      font-size: $standart-fz;
+    }
+  }
+  &__participants{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 15px;
+    row-gap: 10px;
+  }
+  &__participant{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    color: $blue-color;
+    padding: 4px 8px;
+    background: #E6F7FF;
+    border: 1px solid #91D5FF;
+    border-radius: 2px;
+  }
+  &__checkbox{
+    max-width: 300px;
+    width: 100%;
+    font-family: $font-family-Inter;
+    font-size: $standart-fz;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    span{
+      margin-bottom: 5px;
+      display: flex;
+      gap: 12px;
+    }
+    label{
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      input{
+        width: 24px;
+        height: 24px;
+        background: transparent;
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    &__group{
+      flex-wrap: wrap;
+      gap: 20px;
+      align-items: baseline;
     }
   }
 }
