--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,11 +22,19 @@ main{
 .container{
   max-width: 1260px;
   width: 100%;
-  padding: 30px 10px 20px 90px;
+  padding: 30px 10px 20px 10px;
   margin: 0 auto;
   @include transition();
   &_active{
-    padding: 30px 10px 0 10px;
+    max-width: 1260px;
+    padding: 30px 10px 20px 10px;
+  }
+  @media screen and (max-width: 1410px) {
+    max-width: 1160px;
+    padding: 30px 10px 20px 90px;
+    &_active{
+      padding: 30px 10px 20px 10px;
+    }
   }
 }
 
@@ -374,6 +382,11 @@ main{
       }
     }
   }
+  @media screen and (max-width: 420px) {
+    &__title{
+      font-size: $sub-title-fz;
+    }
+  }
 }
 
 
@@ -464,6 +477,8 @@ main{
 
 .pagination{
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
   max-width: 450px;
   width: 100%;
   margin-left: auto;
@@ -495,6 +510,20 @@ main{
   &__prev{
     color: #2422204D;
     cursor: not-allowed;
+  }
+  &__all{
+    margin-left: 30px;
+    max-width: 160px;
+    width: 100%;
+    select{
+      font-family: $font-family-Inter;
+      font-size: 18px;
+      padding: 6px 13px 6px 10px;
+      width: 100%;
+      background: transparent;
+      border: 1px solid $grey-light-color;
+      border-radius: 5px;
+    }
   }
 }
 
@@ -625,6 +654,481 @@ main{
       flex-wrap: wrap;
       gap: 20px;
       align-items: baseline;
+    }
+  }
+}
+
+
+//                REPORTS
+
+
+.reports{
+  .header__block{
+    max-width: 300px;
+  }
+  .table__cell_first{
+    flex-basis: 30.7%;
+  }
+  .table__cell_second{
+    flex-basis: 12.1%;
+  }
+  .table__cell_third{
+    flex-basis: 20.2%;
+  }
+  .table__cell_fourth{
+    flex-basis: 16.2%;
+  }
+  .table__cell_fifth{
+    flex-basis: 10.5%;
+  }
+  .table__cell_sixth{
+    flex-basis: 10.5%;
+  }
+  @media screen and (max-width: 768px) {
+    .header__bottom{
+      align-items: baseline;
+    }
+    .header__block{
+      max-width: 170px;
+    }
+  }
+}
+
+
+//                REPORTS VIEW
+
+
+.reports-view{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 20px;
+  &__item{
+    flex-basis: 49%;
+    width: 100%;
+    background: $contrast-color;
+    border-radius: 16px;
+    padding: 18px 14px;
+  }
+  &__top{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 24px;
+  }
+  &__img{
+    max-width: 60px;
+    max-height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__name{
+    font-family: $font-family-Inter;
+    font-size: $sub-title-fz;
+    margin-bottom: 2px;
+  }
+  &__small{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    color: $grey-light-color;
+  }
+  &__content{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  &__sub-title{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    margin-bottom: 8px;
+  }
+  &__chart{
+    display: flex;
+    align-items: center;
+    gap: 17px;
+  }
+  &__line{
+    position: relative;
+    max-width: 535px;
+    width: 100%;
+    span{
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 10px;
+      border-radius: 10px;
+    }
+    &_red{
+      height: 10px;
+      background: linear-gradient(90deg,#ff8a3440 0,#ec373740 100%);
+      border-radius: 100px;
+      overflow: hidden;
+      span{
+        width: 22%;
+        background: linear-gradient(90deg, #FF8A34 0%, #EC3737 100%);
+      }
+    }
+    &_orange{
+      height: 10px;
+      background: linear-gradient(293.86deg, #FE7E0740 15.34%, #FFBA3540 84.66%);
+      border-radius: 100px;
+      overflow: hidden;
+      span{
+        width: 57%;
+        background: linear-gradient(293.86deg, #FE7E07 15.34%, #FFBA35 84.66%);
+      }
+    }
+    &_green1{
+      height: 10px;
+      background: linear-gradient(293.88deg, #53D75040 15.34%, #8DF33C40 85.28%);
+      border-radius: 100px;
+      overflow: hidden;
+      span{
+        width: 84%;
+        background: linear-gradient(293.88deg, #53D750 15.34%, #8DF33C 85.28%);
+      }
+    }
+    &_green2{
+      height: 10px;
+      background: linear-gradient(293.88deg, #53D75040 15.34%, #8DF33C40 85.28%);
+      border-radius: 100px;
+      overflow: hidden;
+      span{
+        width: 77%;
+        background: linear-gradient(293.88deg, #53D750 15.34%, #8DF33C 85.28%);
+      }
+    }
+  }
+  &__percent{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    font-weight: 600;
+  }
+  @media screen and (max-width: 768px) {
+    &__item{
+      flex-basis: 100%;
+    }
+  }
+}
+
+
+//                CHARTS
+
+
+.charts{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: 49%;
+  row-gap: 20px;
+  &__item{
+    flex-basis: 32%;
+    width: 100%;
+    background: $contrast-color;
+    border-radius: 16px;
+    padding: 18px 14px;
+  }
+  &__text{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    margin-bottom: 24px;
+    font-weight: 400;
+  }
+  &__title{
+    font-family: $font-family-Inter;
+    font-size: $title-fz;
+    margin-bottom: 10px;
+    font-weight: 600;
+    b{
+      font-size: $small-fz;
+      color: $grey-light-color;
+      font-weight: 400;
+    }
+  }
+  &__chart{
+    width: 100%;
+    img{
+      width: 100%;
+    }
+  }
+  @media screen and (max-width: 1240px) {
+    flex-basis: 100%;
+    &__item{
+      flex-basis: 15%;
+    }
+  }
+  @media screen and (max-width: 1000px) {
+    &__item{
+      flex-basis: 32%;
+    }
+  }
+  @media screen and (max-width: 520px) {
+    &__item{
+      flex-basis: 48%;
+    }
+  }
+  @media screen and (max-width: 350px) {
+    &__item{
+      flex-basis: 100%;
+    }
+  }
+}
+
+
+//                PROGRAMS
+
+
+.programs{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 10px;
+  &__item{
+    max-width: 400px;
+    width: 100%;
+    padding: 18px 14px;
+    background: $contrast-color;
+    border-radius: 16px;
+  }
+  &__top{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  &__img{
+    max-width: 70px;
+    max-height: 70px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__title{
+    font-family: $font-family-Inter;
+    font-size: $sub-title-fz;
+    font-weight: 500;
+    margin-bottom: 2px;
+  }
+  &__text{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+  }
+  &__button{
+    font-family: $font-family-Inter;
+    font-size: $standart-fz;
+    border: 1px solid $blue-color;
+    border-radius: 8px;
+    color: $blue-color;
+    width: 100%;
+    padding: 8px 16px;
+    align-items: center;
+    background: transparent;
+    &_unactive{
+      border-color: $grey-light-color;
+      color: $grey-light-color;
+    }
+  }
+  @media screen and (max-width: 1000px) {
+    flex-wrap: wrap;
+    &__item{
+      max-width: unset;
+      flex-basis: 49%;
+      &:last-child{
+        flex-basis: 100%;
+      }
+    }
+  }
+  @media screen and (max-width: 768px){
+    &__item{
+      flex-basis: 100%;
+    }
+  }
+}
+
+
+//                TABS
+
+
+.tabs{
+  &__item{
+    display: none;
+    &_active{
+      display: block;
+    }
+  }
+  &__top{
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  &__title{
+    font-family: $font-family-Montserrat;
+    font-size: $sub-title-fz;
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+  &__text{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    a{
+      color: $blue-color;
+    }
+    &_flex{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  }
+  &__table{
+    width: 100%;
+    margin-bottom: 40px;
+    table{
+      width: 100%;
+    }
+  }
+  &__thead{
+    width: 100%;
+    display: flex;
+    background: $grey-color;
+    padding: 20px 0;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    .tabs__cell{
+      font-size: $standart-fz;
+      border-right: 1px solid $grey-light-color;
+      color: $primary-color;
+      &:last-child{
+        border: 0;
+      }
+    }
+  }
+  &__row{
+    width: 100%;
+    display: flex;
+    padding: 16px 0;
+    background: $contrast-color;
+    border-bottom: 1px solid $grey-color;
+    &:last-child{
+      border: 0;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
+  }
+  &__cell{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    padding-right: 12px;
+    padding-left: 12px;
+    overflow: hidden;
+    white-space: nowrap;
+    &_first{
+      flex-basis: 16.2%;
+    }
+    &_second{
+      flex-basis: 16.2%;
+    }
+    &_third{
+      flex-basis: 67.8%;
+      p{
+        color: $blue-color;
+      }
+    }
+  }
+  &__example{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    background: $contrast-color;
+    border: 1px solid $grey-color;
+    border-radius: 10px;
+    padding: 10px 12px;
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  &__form{
+    margin-bottom: 60px;
+  }
+  &__block{
+    max-width: 470px;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 25px;
+    .tabs__label{
+      margin-bottom: 0;
+    }
+  }
+  &__label{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    max-width: 400px;
+    width: 100%;
+    margin-bottom: 25px;
+  }
+  &__sub-title{
+    font-family: $font-family-Inter;
+    font-size: $standart-fz;
+    margin-bottom: 8px;
+  }
+  &__input{
+    width: 100%;
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    padding: 13px 12px;
+    background: transparent;
+    border: 1px solid $grey-light-color;
+    border-radius: 10px;
+  }
+  &__textarea{
+    font-family: $font-family-Inter;
+    font-size: $small-fz;
+    padding: 14px 12px;
+    width: 100%;
+    border-radius: 10px;
+    background: transparent;
+    border: 1px solid $grey-light-color;
+    margin-bottom: 25px;
+  }
+  &__plus, &__minus{
+    width: 46px;
+    height: 46px;
+    @include flex();
+    border: 1px solid transparent;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  &__plus{
+    border-color: $blue-color;
+  }
+  &__minus{
+    border-color: #ed1d23;
+  }
+  &__button{
+    padding: 8px 16px;
+    font-family: $font-family-Inter;
+    font-size: $standart-fz;
+    color: $contrast-color;
+    background: $blue-color;
+    border-radius: 10px;
+  }
+  @media screen and (max-width: 1140px) {
+    &__table{
+      overflow-x: scroll;
+    }
+  }
+  @media screen and (max-width: 570px){
+    &__plus, &__minus{
+      max-width: 400px;
+      width: 100%;
     }
   }
 }
