add customization for select

--- a/assets/scss/_variable.scss
+++ b/assets/scss/_variable.scss
@@ -24,7 +24,13 @@ $contrast-color: #FFFFFF;
 
 $blue-color: #1890FF;
 
+$blue-light-color: #40A9FF;
+
+$blue-color-hover: #E0EFFE;
+
 $background-color: #F8F8F8;
+
+$disabled-color: #2422204D;
 
 // font-family
 
