--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -205,7 +205,7 @@ select{
   border-right: 1px solid $grey-color;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
+  z-index: 10;
   @include transition();
   &_active{
     width: 300px;
